# impulse

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md
assets/: dev.impulse.Impulse.desktop
assets/icons/material/: LICENSE  icon-mapping.json
docs/: plan-alacritty-terminal-migration.md
docs/superpowers/plans/: 2026-04-06-alacritty-terminal-migration.md  2026-04-07-osc-interception.md  2026-04-08-terminal-cleanup.md  2026-04-09-file-tree-performance.md  2026-05-04-warp-inspired-improvements.md  2026-06-09-macos-terminal-damage-and-filetree-retirement.md
docs/superpowers/specs/: 2026-04-06-alacritty-terminal-migration-design.md  2026-04-07-osc-interception-design.md
impulse-core/: Cargo.toml
impulse-core/examples/: contrast_audit.rs  settings_schema.rs
impulse-core/src/: close_risk.rs  command_palette.rs  completion.rs  file_tree.rs  filesystem.rs  git.rs  lib.rs  lsp.rs  pty.rs  search.rs  session_state.rs  settings.rs  shell.rs  shell_parser.rs  theme.rs  update.rs  util.rs
impulse-core/src/shell_integration/: bash.sh  fish.sh  zsh.sh
impulse-core/themes/: ayu-dark.toml  catppuccin-latte.toml  catppuccin-mocha.toml  dracula.toml  everforest-dark.toml  github-dark.toml  github-light.toml  gruvbox.toml  harbor.toml  kanagawa.toml  monokai-pro.toml  nord.toml  one-dark.toml  palenight.toml  rose-pine.toml  solarized-dark.toml  solarized-light.toml  tokyo-night-storm.toml  tokyo-night.toml
impulse-editor/: Cargo.toml
impulse-editor/src/: assets.rs  css.rs  lib.rs  markdown.rs  protocol.rs  svg.rs
impulse-editor/web/: editor.html  editor.js  review.html  review.js
impulse-ffi/: Cargo.toml  cbindgen.toml
impulse-ffi/src/: lib.rs
impulse-linux/: .qmlls.ini  Cargo.toml  build.rs
impulse-linux/cpp/: helpers.cpp  helpers.h
impulse-linux/qml/: ChromeDialog.qml  ChromeMenu.qml  ChromeMenuItem.qml  ChromeMenuSeparator.qml  ChromeTextField.qml  ChromeToolButton.qml  CommandPalette.qml  ContentArea.qml  EditorView.qml  FileNodeDelegate.qml  FileTreeView.qml  GoToLineDialog.qml  Main.qml  QuickOpenDialog.qml  SearchPanel.qml  SettingsWindow.qml  Sidebar.qml  StatusBar.qml  TabBar.qml  TerminalView.qml
impulse-linux/src/: context_bar.rs  editor.rs  editor_bridge.rs  editor_webview.rs  file_icons.rs  file_tree_model.rs  helpers.rs  keybindings.rs  lsp_bridge.rs  lsp_completion.rs  lsp_hover.rs  main.rs  multi_cursor.rs  project_search.rs  review_tab.rs  search_model.rs  session_state.rs  settings.rs  settings_model.rs  settings_page.rs  sidebar.rs  status_bar.rs  terminal.rs  terminal_bridge.rs  terminal_container.rs  theme.rs  theme_bridge.rs  vertical_tabs.rs  window.rs  window_model.rs
impulse-linux/src/window/: context.rs  dialogs.rs  keybinding_setup.rs  mod.rs  sidebar_signals.rs  tab_management.rs
impulse-macos/: Cargo.toml  Package.swift  build.sh
impulse-macos/CImpulseFFI/: module.modulemap
impulse-macos/CImpulseFFI/include/: impulse_ffi.h
impulse-macos/Sources/ImpulseApp/: AppDelegate.swift  AppState.swift  CloseRisk.swift  ImpulseApp.swift  MainWindow.swift  MainWindowController+LSP.swift  Notifications.swift  ResourceBundle.swift  SessionState.swift  ShellEscape.swift  TabManager.swift
impulse-macos/Sources/ImpulseApp/Bridge/: ImpulseCore.swift
impulse-macos/Sources/ImpulseApp/Editor/: DiffReviewTab.swift  EditorProtocol.swift  EditorTab.swift  EditorWebViewPool.swift  ReviewProtocol.swift
impulse-macos/Sources/ImpulseApp/Keybindings/: Keybindings.swift
impulse-macos/Sources/ImpulseApp/Settings/: Settings.swift  SettingsFormSheet.swift  SettingsWindow.swift
impulse-macos/Sources/ImpulseApp/Sidebar/: FileIcons.swift  FileTreeDataController.swift  FileTreeNode.swift  FileTreeView.swift  SearchPanel.swift
impulse-macos/Sources/ImpulseApp/SwiftUI/Models/: WindowModel+Search.swift  WindowModel.swift
impulse-macos/Sources/ImpulseApp/SwiftUI/Representables/: ContentAreaRepresentable.swift  VerticalResizeHandle.swift
impulse-macos/Sources/ImpulseApp/SwiftUI/Views/: BranchPickerView.swift  CompletionPopupView.swift  ContextChips.swift  FileTreeListView.swift  MainContentView.swift  SearchPanelView.swift  SidebarActionBarView.swift  SidebarTabListView.swift  SidebarView.swift  StatusBarView.swift  TabBarView.swift  TerminalContextBarView.swift
impulse-macos/Sources/ImpulseApp/Terminal/: CompletionPanel.swift  KeyEncoder.swift  TerminalBackend.swift  TerminalContainer.swift  TerminalHistoryPicker.swift  TerminalRenderer.swift  TerminalTab.swift
impulse-macos/Sources/ImpulseApp/Theme/: Theme.swift
impulse-macos/Sources/ImpulseApp/UI/: CommandPalette.swift  CustomTabBar.swift  MenuBuilder.swift  NameInputDialog.swift  StatusBar.swift
impulse-macos/Tests/ImpulseAppTests/: KeybindingRuntimeTests.swift  TerminalRendererGeometryTests.swift
impulse-macos/src/: app.rs  editor.rs  main.rs  window.rs
impulse-terminal/: Cargo.toml
impulse-terminal/src/: backend.rs  blocks.rs  buffer.rs  config.rs  event.rs  grid.rs  history.rs  lib.rs  osc_scanner.rs  search.rs
impulse-terminal/tests/: blocks_integration.rs
pkg/arch/: PKGBUILD
scripts/: generate-icon-mapping.py  install-lsp-servers.sh  release.sh  vendor-monaco.sh  write-settings-schema.sh
