[workspace]
members = ["impulse-core", "impulse-editor", "impulse-linux", "impulse-ffi"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "process", "io-util", "sync", "macros", "time"] }
git2 = "0.20"
lsp-types = { version = "0.97", features = ["proposed"] }
dirs = "6"
url = "2"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
