[package]
name = "impulse-core"
version = "0.2.1"
edition = "2021"
description = "Core library for Impulse terminal IDE"
license = "GPL-3.0-only"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
ignore = "0.4"
log = "0.4"
lsp-types = { version = "0.97", features = ["proposed"] }
tokio = { version = "1", features = ["rt-multi-thread", "process", "io-util", "sync", "macros", "time"] }
git2 = "0.20"
url = "2"
dirs = "6"
