[package]
name = "impulse-core"
version = "0.10.0"
edition = "2021"
description = "Core library for Impulse terminal IDE"
license = "GPL-3.0-only"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
ignore = "0.4"
log = { workspace = true }
lsp-types = { workspace = true }
tokio = { workspace = true }
git2 = { workspace = true }
url = { workspace = true }
dirs = { workspace = true }
parking_lot = { workspace = true }
lru = "0.12"
regex = "1"

[dev-dependencies]
tempfile = "3"
