[package]
name = "impulse-editor"
version = "0.9.0"
edition = "2021"
description = "Shared Monaco editor protocol and assets for Impulse IDE"
license = "GPL-3.0-only"

[dependencies]
include_dir = "0.7"
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
fs2 = "0.4"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
