[package]
name = "impulse-ffi"
version = "0.4.0"
edition = "2021"
description = "C-compatible FFI wrappers around impulse-core for macOS Swift frontend"
license = "GPL-3.0-only"

[lib]
crate-type = ["staticlib"]

[dependencies]
impulse-core = { path = "../impulse-core" }
impulse-editor = { path = "../impulse-editor" }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
log = "0.4"
lsp-types = { version = "0.97", features = ["proposed"] }
