[package]
name = "impulse-ffi"
version = "0.5.0"
edition = "2021"
description = "C-compatible FFI wrappers around impulse-core for macOS Swift frontend"
license = "GPL-3.0-only"

[lib]
crate-type = ["staticlib"]

[dependencies]
impulse-core = { path = "../impulse-core" }
impulse-editor = { path = "../impulse-editor" }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
log = "0.4"
lsp-types = { version = "0.97", features = ["proposed"] }
# Statically link OpenSSL so the macOS binary doesn't depend on Homebrew.
# git2 pulls in openssl-sys via libgit2-sys; without vendoring, the built
# binary tries to load /opt/homebrew/libssl.3.dylib at runtime which crashes
# on machines without Homebrew.
git2 = { version = "0.20", features = ["vendored-openssl"] }
