[package]
name = "impulse-linux"
version = "0.3.0"
edition = "2021"
description = "Impulse terminal IDE - Linux GTK4 frontend"
license = "GPL-3.0-only"

[[bin]]
name = "impulse"
path = "src/main.rs"

[dependencies]
impulse-core = { path = "../impulse-core" }
impulse-editor = { path = "../impulse-editor" }
gtk4 = { version = "0.10", features = ["v4_16"] }
libadwaita = { version = "0.8", features = ["v1_5"] }
vte4 = { version = "0.9", features = ["v0_78"] }
tokio = { version = "1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
notify = "7"
lsp-types = { version = "0.97", features = ["proposed"] }
url = "2"
webkit6 = "0.5"
resvg = "0.45"
dirs = "6"

[package.metadata.deb]
maintainer = "Impulse Contributors"
section = "devel"
priority = "optional"
depends = "libgtk-4-1 (>= 4.14), libadwaita-1-0 (>= 1.5), libvte-2.91-gtk4-0, libgtksourceview-5-0, libwebkitgtk-6.0-4"
assets = [
    ["target/release/impulse", "usr/bin/", "755"],
    ["../assets/dev.impulse.Impulse.desktop", "usr/share/applications/", "644"],
    ["../assets/impulse-logo.svg", "usr/share/icons/hicolor/scalable/apps/dev.impulse.Impulse.svg", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/impulse", dest = "/usr/bin/impulse", mode = "755" },
    { source = "../assets/dev.impulse.Impulse.desktop", dest = "/usr/share/applications/dev.impulse.Impulse.desktop", mode = "644" },
    { source = "../assets/impulse-logo.svg", dest = "/usr/share/icons/hicolor/scalable/apps/dev.impulse.Impulse.svg", mode = "644" },
]

[package.metadata.generate-rpm.requires]
gtk4 = ">= 4.14"
libadwaita = ">= 1.5"
vte4 = "*"
gtksourceview5 = "*"
"webkitgtk6.0" = "*"
