[package]
name = "impulse-linux"
version = "0.18.1"
edition = "2021"
description = "Impulse terminal IDE - Linux Qt frontend"
license = "GPL-3.0-only"

[[bin]]
name = "impulse"
path = "src/main.rs"

[dependencies]
impulse-core = { path = "../impulse-core" }
impulse-editor = { path = "../impulse-editor" }
cxx = "1.0"
cxx-qt = "0.8"
cxx-qt-lib = { version = "0.8", features = ["qt_full"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = "0.11"
lsp-types = { workspace = true }
url = { workspace = true }
dirs = { workspace = true }
parking_lot = { workspace = true }
open = "5"
notify = "7"

[build-dependencies]
cxx-qt-build = { version = "0.8", features = ["link_qt_object_files"] }
