[package]
name = "impulse-macos"
version = "0.1.0"
edition = "2021"
description = "Impulse terminal IDE - macOS native frontend"
license = "GPL-3.0-only"

[[bin]]
name = "impulse-macos"
path = "src/main.rs"

[dependencies]
impulse-core = { path = "../impulse-core" }
impulse-editor = { path = "../impulse-editor" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"

# macOS-native dependencies (only compile on macOS)
# Uncomment these when building on macOS:
# objc2 = "0.6"
# objc2-foundation = { version = "0.3", features = ["NSString", "NSArray", "NSDictionary", "NSProcessInfo"] }
# objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSWindow", "NSView", "NSMenu", "NSMenuItem", "NSRunningApplication", "NSResponder", "NSSplitView"] }
# objc2-web-kit = { version = "0.3", features = ["WKWebView", "WKWebViewConfiguration", "WKUserContentController", "WKScriptMessage", "WKScriptMessageHandler"] }
