[package]
name = "impulse-terminal"
version = "0.15.2"
edition = "2021"
description = "Terminal emulation backend for Impulse, built on alacritty_terminal"
license = "GPL-3.0-only"

[dependencies]
impulse-core = { path = "../impulse-core" }
alacritty_terminal = "0.25"
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
bitflags = "2"
crossbeam-channel = "0.5"
