[package]
name = "impulse-terminal"
version = "0.19.1"
edition = "2021"
description = "Terminal emulation backend for Impulse, built on alacritty_terminal"
license = "GPL-3.0-only"

[dependencies]
alacritty_terminal = "0.26"
crossbeam-channel = "0.5"
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
bitflags = "2"
